--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="static/css/index.css">
     <script type="module" src="static/js/index.js"></script>
+    <body>
   </head>
-  <body>
-    hello world
+    <div id="app" class="w-100 h-100"></div>
   </body>
 </html>
